@@ -1,3 +1,7 @@
+2008-10-03  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Fixed bug #9452: config.absRefPrefix is applied only to a fixed set of directories
+
 2008-10-02  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9444: htmlArea RTE: Incorrect assigment of class to one line <ol> in Firefox
